[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "DlmEngine"
version = "1.0.1"
requires-python = ">=3.9"
authors = [
  {name = "Stephan.Schultchen", email = "stephan.schultchen@gmail.com"},
]
description = "Distributed Lock Engine API"
dynamic = ["dependencies"]
license = {file = "LICENSE.txt"}
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
dlmengine = "dlmengine:main.main"

[tool.hatch.build.targets.wheel]
packages = ["dlmengine"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

